--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@
     width: 75%;
     max-width: 1440px;
     margin: 0 auto;
+    margin-bottom: 50px;
 }
 
 .section-heading {
@@ -184,6 +185,7 @@
     width: 82%;
     max-width: 1320px;
     margin: 0 auto;
+   margin-bottom: 50px;
 }
 
 .banner {
@@ -281,12 +283,9 @@
     font-weight: 900;
     line-height: normal;
 }
-.sectio-content {
+.section-content {
     display: flex;
     background:#fff ;
     width: 1300px;
     height: 5335px;
-}
-#holi {
-display: inline;
 }
